# task-graph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: tasks.h
include/taskgraph/: PoolAllocator.h  TaskQueue.h  utils.h
src/: AtomicPoolAllocator.h  CMakeLists.txt  PoolAllocator.h  TaskGraph.cpp  TaskGraph.h  TaskQueue.cpp  TaskQueue.h  Worker.cpp  Worker.h  tasks.cpp  tasks.h
src/taskgraph/: TaskGraph.cpp  TaskGraph.h  TaskQueue.cpp  Worker.cpp  Worker.h
test/: CMakeLists.txt  tests.cpp
test/src/: AtomicPoolAllocator_tests.cpp  PoolAllocator_tests.cpp  TaskQueue_tests.cpp  taskgraph_tests.cpp  tasks_tests.cpp
