cmake_minimum_required(VERSION 3.10)
project(task-graph)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(TASKGRAPH_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(TASKGRAPH_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(TASKGRAPH_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(TASKGRAPH_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src)

include_directories(${TASKGRAPH_INSTALL_INCLUDE_DIR})
include_directories(${TASKGRAPH_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)
